Updating with new data from today

--- a/manuscript/bibliography.bib
+++ b/manuscript/bibliography.bib
@@ -8,7 +8,7 @@
 
 @article{SSI,
 	Author = {{Statens Serum Institut}},
-	Title = {Overvågning af COVID-19},
+	Title = {Overvågning af {COVID-19}},
 	Url = {https://www.ssi.dk/sygdomme-beredskab-og-forskning/sygdomsovervaagning/c/covid19-overvaagning},
 	year = 2020
 }
